# bendlab_arduino_master

./: .gitignore  README.md  arduino_com_capture.py  config.yaml  main.py  pyproject.toml  requirements.txt
devlogs/2025-09-02/: arduino_com_capture_development_plan.md
devlogs/2025-09-11/: rolling_queue_buffer_implementation_plan.md
playground/: .gitignore  ADC_pressure_working_curve_JQ-160pts_sensor_array_C60510.csv  ANNOTATION_GUIDE.md  ANNOTATION_QUICKSTART.md  ANNOTATION_TOOL_SUMMARY.md  CHANGELOG.md  COMPATIBILITY_UPDATE.md  Copy of 【矩侨精密】160-1024全床传感器ADC压强数据表 241113.xlsx  DATAFRAME_INDEX_ASSIGNMENT.md  ORGANIZATION_SUMMARY.md  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SENSOR_MAPPING_QUICK_REF.md  START_HERE.md  STATUS.md  TESTING_GUIDE.md  acquisition_process.py  annotate_sensors.py  assign_dataframe_indices.py  demo_colormaps.py  demo_sensor_mapping_comparison.py  glove_parser.py  glove_sensor_map_annotated.csv  glove_sensor_map_annotated_w_dataframe_indices.csv  glove_sensor_map_refined.csv  glove_sensor_map_with_indices.csv  hand_visualizer.py  pressure_calibration.py  profile_detailed.py  profile_performance.py  realtime_glove_viz.py  realtime_vis_plan.md  run_annotation_tool.sh  sensor_mapping.py  serial_reader.py  test_acquisition_only.py  test_acquisition_performance.py  test_color_generation.py  (+17 more)
playground/archive/: README_ARCHIVE.md  (+7 more)
src/: data_processor.py  output_handlers.py  serial_manager.py
tests/: test_data_processor.py  test_improvements.py  test_output_handlers.py  test_serial_manager.py
(+29 files in other folders)
